fix: some fixes mostly due to exception inside transaction and lazy initialization